# custom_permutation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  pypi-release.yaml  python-app.yaml  test-app.yaml
src/: cli.py  lib.py
src/custom_permutation/: __init__.py  cli.py  core.py  lib.py  scripts.py
tests/: __init__.py  test_app.py  test_freq_in_range.py  test_increment_by_custom_base.py
